--- a/contacts.html
+++ b/contacts.html
@@ -34,11 +34,11 @@
 	</div>
 </div>
 
-	<!-- Шапка -->
+<!-------------- Шапка ------------------->
 <header class="header_">
 		<div class="container">
 			<div class="header_inner">
-				<a href="index.html"><img class="header_item" src="img/logo/logo.png" alt="HTML5"></a>
+				<a href="index.html"><img class="header_item_logo" src="img/logo/logo.png" alt="HTML5"></a>
 				<div class="header_item">
 					<p class="header_text header_text1" >
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
@@ -59,6 +59,7 @@
 					</p>
 				</div>					
 			</div>
+			
 			<div class = "strip_header"></div>				
 					<div class="header_text4">
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
