--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="css/media320.css"> -->
 	<link rel="stylesheet" type="text/css" href="css/mediaMyPhone.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800|Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<script src="js/script.js"/>
 	<title>Дом престарелых "Филипыч"</title>
@@ -66,7 +66,7 @@
 				</div>					
 			</div>
 			
-			<div class = "strip_header"></div>				
+				<div class ="strip_header"></div>					
 					<div class="header_text4">
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
 					</div>
