--- a/request.html
+++ b/request.html
@@ -152,6 +152,17 @@
 	</div>
 </div>
 
+<div class = "message_phone">
+	<div class="container">
+		<div class="message_text_media">Отправить<br>заявку
+		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div>
+		
+		<div class="message_img_phone">
+		<img  src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" /></div> 
+		<div class="message_text_phone">Отправить<br>заявку</div>
+	</div>
+</div>
+
 <div class="form">
 	<table>
 		<th>
@@ -540,7 +551,105 @@ var h_hght1 = 0; // высота шапки
 	</div>
 </div>
 
-<div class="black_footer_prices">
+<div class = "footer_request_phone">
+	<div class="container">	
+		<table>
+			<tr>
+				<div class = "img_ma_phone">
+					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc="></a>
+					<img src="img/footer/ma.png" width="75x" height="86px" alt="HTML5"/></div>
+			</tr>	
+		</table>
+		
+		<table>
+			<tr>
+				<td>
+					<div class = "TheMainThing_footer_phone1">Контакты</div>
+				</td>
+			</tr>
+		</table>
+		<table>	
+			<tr>
+				<td>
+					<div class = "img_strip_phone">
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
+				</td>
+			</tr>
+		</table>
+		
+		<table class="contacts_footer_phone">
+			<tr>		
+				<td>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/gps.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+								<div class="_phone">
+								<span style="vertical-align: middle;">Московская область,<br>Одинцовский район, дер.<br>Марьино, ул. Южная, д.</span></div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/phone.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+							<div class="_phone1">
+								<span style="vertical-align: middle;">Моб: +7 (915) 212-28-19</span></div>
+									</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/1message.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+							<div class="_phone">
+								<span style="vertical-align: middle;">dom-prestarelyh@bk.ru</span></div>
+								</div>
+							</td>
+						</tr>	
+				</td>
+			</tr>
+		</table>
+		
+		<table>		
+			<tr>
+				<td>
+					<div class = "TheMainThing_footer_phone2">Мы в соц сетях</div></div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<div class = "img_strip1_phone">
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
+				</td>
+			</tr>
+		</table>
+		<table>
+			<tr>
+				<td>
+					<div class = "social_footer_phone">
+						<div class="img_icon_footer_phone">
+						<a href="https://www.facebook.com/grandpa.filipych">
+							<img src="img/footer/f_icon.png" width="35x" height="35px"/></a>
+						<a href="https://vk.com/club155151679">
+							<img src="img/footer/vk_icon.png" width="35x" height="35px"/></a>
+						<a href="https://ok.ru/filipych">
+							<img src="img/footer/o_icon.png" width="35x" height="35px"/></a>
+						</div>
+					</div>
+				</td>
+			</tr>	
+		</table>
+	</div>
+</div>
+
+<div class="black_footer_request">
 	<div class="container">©2020 Частный дом престарелых «Филипыч»</div>
 </div>
 
