--- a/2.html
+++ b/2.html
@@ -518,8 +518,10 @@
 	</div>
 </div>
 
+<div class = "black_width">
 <div class="black_footer_2">
 	<div class="container">©2020 Частный дом престарелых «Филипыч»</div>
+</div>
 </div>
 <!---- Доп кнопки ----->
 <!---- Кн поднятия ---->
