--- a/3.html
+++ b/3.html
@@ -816,8 +816,10 @@ var h_hght1 = 0; // высота шапки
 	</div>
 </div>
 
+<div class = "black_width">
 <div class="black_footer_3">
 	<div class="container">©2020 Частный дом престарелых «Филипыч»</div>
+</div>
 </div>
 
 </body>
