--- a/4.html
+++ b/4.html
@@ -751,10 +751,11 @@
 	</div>
 </div>
 
+<div class = "black_width">
 <div class="black_footer_4">
 	<div class="container">©2020 Частный дом престарелых «Филипыч»</div>
 </div>
-
+</div>
 <!---- Доп кнопки ----->
 <!---- Кн поднятия ---->
 <div id="button_up"><img src="img/up.png"/></div>
