--- a/photo.gr.html
+++ b/photo.gr.html
@@ -840,8 +840,10 @@ var h_hght1 = 0; // высота шапки
 	</div>
 </div>
 
+<div class = "black_width">
 <div class="black_footer_dom_photo">
 	<div class="container">©2020 Частный дом престарелых «Филипыч»</div>
+</div>
 </div>
 
 </body>
