--- a/prices.html
+++ b/prices.html
@@ -727,8 +727,10 @@ var h_hght1 = 0; // высота шапки
 	</div>
 </div>
 
+<div class = "black_width">
 <div class="black_footer_prices">
 	<div class="container">©2020 Частный дом престарелых «Филипыч»</div>
+</div>
 </div>
 
 </body>
