--- a/photo.dom.html
+++ b/photo.dom.html
@@ -150,17 +150,14 @@
 	<div class="container">
 		<div class="message_text">Наш дом</div>
 		<!-- <img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
+		<div class="message_text1">Наш дом</div>
 	</div>
 </div>
 
 <div class = "message_phone">
 	<div class="container">
-		<div class="message_text">Наш дом</div>
-		<!-- <img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
-		<div class="message_text1">Наш дом</div>
-		
 		<div class="message1_img_phone">
-		<img  src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" /></div> 
+		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="400px"/></div> 
 		<div class="message1_text_phone">Наш дом</div>
 	</div>
 </div>
