--- a/photo.gr.html
+++ b/photo.gr.html
@@ -155,13 +155,8 @@
 
 <div class = "message_phone">
 	<div class="container">
-		<div class="message_text">Наши бабушки<br>и дедушки</div>
-		
-		<div class="message_text_media">Наши бабушки<br>и дедушки
-		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div>
-		
 		<div class="message_img_phone">
-		<img  src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" /></div> 
+		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="400px"/></div> 
 		<div class="message_text_phone">Наши бабушки<br>и дедушки</div>
 	</div>
 </div>
