--- a/index.html
+++ b/index.html
@@ -611,9 +611,9 @@ $(function(){
 </div>
 
 <!---- Подвал ---->
-<div class = "footer">
+<div class = "footer" width="100%">
 	<div class="container">		
-		<table width="100%" height="300px">
+		<table>
 			<tr>
 				<th rowspan="3" width="300px" height="297px">
 				
@@ -896,7 +896,7 @@ var h_hght1 = 0; // высота шапки
     });
 </script>
 <!---------- Кн звонка ---------->
-<div id="button_bell"><img src="img/bell1.png"/><a href=”tel: 88005553535″></a></div>
+<a href=”tel: 88005553535″ id="button_bell"><img src="img/bell1.png"/></a>
 
 </body>
 </html> 
