--- a/photo.dom.html
+++ b/photo.dom.html
@@ -157,7 +157,7 @@
 <div class = "message_phone">
 	<div class="container">
 		<div class="message1_img_phone">
-		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="400px"/></div> 
+		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;"/></div> 
 		<div class="message1_text_phone">Наш дом</div>
 	</div>
 </div>
