--- a/photo.gr.html
+++ b/photo.gr.html
@@ -150,13 +150,14 @@
 	<div class="container">
 		<div class="message_text">Наши бабушки и дедушки</div>
 		<!-- <img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
+		<div class="message_text1">Наши бабушки<br>и дедушки</div>
 	</div>
 </div>
 
 <div class = "message_phone">
 	<div class="container">
 		<div class="message_img_phone">
-		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;" width="400px"/></div> 
+		<img src="img/message_media_phone.png" alt="HTML5" style="vertical-align: middle;"/></div> 
 		<div class="message_text_phone">Наши бабушки<br>и дедушки</div>
 	</div>
 </div>
