--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 		<li><a class="menu__item" href="index.html">Главная</a></li>
 		<li><a class= "menu__item" href="photo.html">Фото</a></li>
 			<li>
-				<a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
-				
+				<a class="top1_mediaMyPhone" href="javascript:void(0);" tabindex="1">Услуги▾</a>
 				<div class="podmenu">
 					<div class="sub-menu1_mediaMyPhone"></div>
 						<div class="sub-menu_mediaMyPhone">
@@ -129,7 +128,7 @@
 							<a class= "top_0" href="4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 				</div>
-				</a>
+				
 			</li>
 			<li><a class= "menu__item" href="prices.html">Цены</a></li>
 			<li><a class= "menu__item" href="oformlenie.html">Оформление</a></li>
@@ -149,7 +148,6 @@
 	</table>
 	</ul>
 </div>
-
 
  <!--------------------- Главный блок --------------------->
 <div class="intro">
@@ -896,7 +894,8 @@ var h_hght1 = 0; // высота шапки
     });
 </script>
 <!---------- Кн звонка ---------->
-<a href=”tel: 88005553535″ id="button_bell"><img src="img/bell1.png"/></a>
+<a href="tel: 89005553535" id="button_bell"><img src="img/bell1.png"/></a>
+<!-- <div id="button_bell"><a href="tel: 89005553535"></div> -->
 
 </body>
 </html> 
