--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 		<th> 
 		<!-- <a href="mailto:vjcr-200@mail.ru"></a> -->
 		<!-- <form action="mail.php" > -->
-			<form id="form" method="post">
+			<form id="form" action="mail.php" method="post">
 				<div class="form_box">				
 					<div class="group">      
 						<input for="name" type="text" id="name" placeholder="Имя" name="Имя" onblur="if(this.value.length == 0) this.value = 'Имя'"
