--- a/photo.html
+++ b/photo.html
@@ -114,7 +114,7 @@
 		<li><a class="menu__item" href="index.html">Главная</a></li>
 		<li><a class= "menu__item" href="photo.html">Фото</a></li>
 			<li>
-				<a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
+				<a class="top1_mediaMyPhone" href="javascript:void(0);" tabindex="1">Услуги▾</a>
 				<div class="podmenu">
 					<div class="sub-menu1_mediaMyPhone"></div>
 						<div class="sub-menu_mediaMyPhone">
@@ -124,7 +124,6 @@
 							<a class= "top_0" href="4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 				</div>
-				</a>
 			</li>
 			<li><a class= "menu__item" href="prices.html">Цены</a></li>
 			<li><a class= "menu__item" href="oformlenie.html">Оформление</a></li>
