--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 			<form id="form" action="mail.php" method="post">
 				<div class="form_box">				
 					<div class="group">      
-						<input for="name" type="text" id="name" placeholder="Имя" name="Имя" onblur="if(this.value.length == 0) this.value = 'Имя'"
+						<input for="name" type="text" id="name" placeholder="Имя" name="name" onblur="if(this.value.length == 0) this.value = 'Имя'"
 						onfocus="if(this.value == 'Имя') this.value = '' " required
 						oninvalid="this.setCustomValidity(' ')" oninput="setCustomValidity('')"/>
 					</div>
