--- a/request.html
+++ b/request.html
@@ -168,7 +168,7 @@
 			<form method="post">
 				<div class="form_box">				
 					<div class="group">      
-						<input type="text" id="name" placeholder="Имя" name="Имя" onblur="if(this.value.length == 0) this.value = 'Имя'"
+						<input type="text" id="name" placeholder="Имя" name="name" onblur="if(this.value.length == 0) this.value = 'Имя'"
 						onfocus="if(this.value == 'Имя') this.value = '' " required
 						oninvalid="this.setCustomValidity(' ')" oninput="setCustomValidity('')"/>
 					</div>
