--- a/photo.html
+++ b/photo.html
@@ -39,7 +39,7 @@
 <header class="header_">
 		<div class="container">
 			<div class="header_inner">
-				<a href="index.php"><img class="header_item_logo" src="img/logo/logo.png" alt="HTML5"></a>
+				<a href="index.html"><img class="header_item_logo" src="img/logo/logo.png" alt="HTML5"></a>
 				<div class="header_item">
 					<p class="header_text header_text1" >
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
@@ -75,7 +75,7 @@
 	<div class="container">
 		<nav class="menu">
 			<ul id="top-menu">
-				<li><a class= "top_" href="index.php">Главная</a></li>
+				<li><a class= "top_" href="index.html">Главная</a></li>
 				<li><a class="active-button" href="photo.html">Фото</a></li>
 				<li><div class= "top1" href="">Услуги▾
 					<div class="sub-menu1"></div>
@@ -91,7 +91,7 @@
 				<li><a class= "top_" href="oformlenie.html">Оформление</a></li>
 				<li><a class= "top_" href="contacts.html">Контакты</a></li>
 				<li><a class= "top_" href="request.php">Отправить заявку</a></li>
-				<li><a class= "top_" href="reviews.php">Отзывы</a></li>
+				<li><a class= "top_" href="reviews.html">Отзывы</a></li>
 			</ul>
 		</nav>
 	</div>	
@@ -112,7 +112,7 @@
 	
 	<img src="img/hamburger-menu/close_menu.png" class="menu__box_img_close" onclick="myFunction()" alt="HTML5" style="vertical-align: middle;"/>
 		
-		<li><a class="menu__item" href="index.php">Главная</a></li>
+		<li><a class="menu__item" href="index.html">Главная</a></li>
 		<li><a class= "menu__item" href="photo.html">Фото</a></li>
 			<li>
 				<a class="top1_mediaMyPhone" href="javascript:void(0);" tabindex="1">Услуги▾</a>
@@ -130,7 +130,7 @@
 			<li><a class= "menu__item" href="oformlenie.html">Оформление</a></li>
 			<li><a class= "menu__item" href="contacts.html">Контакты</a></li>
 			<li><a class= "menu__item" href="request.php">Отправить заявку</a></li>
-			<li><a class= "menu__item" href="reviews.php">Отзывы</a></li>		
+			<li><a class= "menu__item" href="reviews.html">Отзывы</a></li>		
    <table>
 		<tr>
 			<td>
